// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes test GET# /friends/:email should fail if email is invalid 1`] = `
Object {
  "code": "BadRequest",
  "message": "Unexpected error.; caused by Error: Invalid email address.",
}
`;

exports[`routes test GET# /friends/:email should fail if email is not found 1`] = `
Object {
  "code": "ResourceNotFound",
  "message": "Resource not found.",
}
`;

exports[`routes test GET# /friends/:email should pass if email is found 1`] = `
Object {
  "count": 1,
  "friends": Array [
    "test2@test.com",
  ],
  "success": true,
}
`;

exports[`routes test POST# /friends should fail if content type is not json 1`] = `
Object {
  "code": "InvalidContent",
  "message": "Expects 'application/json'",
}
`;

exports[`routes test POST# /friends should fail if only one email is supplied in the payload 1`] = `
Object {
  "code": "BadRequest",
  "message": "Unexpected error.; caused by Error: Insufficient number of email addresses supplied.",
}
`;

exports[`routes test POST# /friends should fail if payload is not array 1`] = `
Object {
  "code": "BadRequest",
  "message": "Unexpected error.; caused by Error: Invalid friends payload.",
}
`;

exports[`routes test POST# /friends should pass if correct data is passed 1`] = `
Object {
  "success": true,
}
`;

exports[`routes test POST# /friends/block should not pass if requestor is not found 1`] = `
Object {
  "code": "ResourceNotFound",
  "message": "Resource not found. --requestor",
}
`;

exports[`routes test POST# /friends/block should not pass if target is not found 1`] = `
Object {
  "code": "ResourceNotFound",
  "message": "Resource not found. --target",
}
`;

exports[`routes test POST# /friends/block should pass if both requestor and target are valid 1`] = `
Object {
  "success": true,
}
`;

exports[`routes test POST# /friends/common should pass if both has common friends 1`] = `
Object {
  "count": 1,
  "friends": Array [
    "test2@test.com",
  ],
  "success": true,
}
`;

exports[`routes test POST# /friends/common should pass if there are no common friends 1`] = `
Object {
  "count": 0,
  "friends": Array [],
  "success": true,
}
`;

exports[`routes test POST# /friends/subscribe should not pass if requestor is not found 1`] = `
Object {
  "code": "ResourceNotFound",
  "message": "Resource not found. --requestor",
}
`;

exports[`routes test POST# /friends/subscribe should not pass if target is not found 1`] = `
Object {
  "code": "ResourceNotFound",
  "message": "Resource not found. --target",
}
`;

exports[`routes test POST# /friends/subscribe should pass if both requestor and target are valid 1`] = `
Object {
  "success": true,
}
`;
